// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> should render an action link 1`] = `
.c0 {
  font-weight: 600;
  font-size: .9375rem;
  text-transform: uppercase;
}

.c0,
.c0:link,
.c0:visited,
.c0:hover,
.c0:active {
  color: rgb(5,87,223);
}

<ActionLink
  href="/lol"
>
  <styled.span>
    <span
      className="c0"
    >
      <Anchor
        href="/lol"
      >
        <a
          href="/lol"
        >
          Grrr I am action man
        </a>
      </Anchor>
    </span>
  </styled.span>
</ActionLink>
`;

exports[`<ActionLink /> should render an action link with a replacement anchor tag 1`] = `
.c0 {
  font-weight: 600;
  font-size: .9375rem;
  text-transform: uppercase;
}

.c0,
.c0:link,
.c0:visited,
.c0:hover,
.c0:active {
  color: rgb(5,87,223);
}

<DefaultsProvider
  value={
    Object {
      "AnchorComponent": [Function],
    }
  }
>
  <ActionLink
    href="#"
  >
    <styled.span>
      <span
        className="c0"
      >
        <Anchor
          href="#"
        >
          <AnchorComponent
            href="#"
          >
            <a
              href="/allTheFeelsUgh"
            >
              Replacement default text
            </a>
          </AnchorComponent>
        </Anchor>
      </span>
    </styled.span>
  </ActionLink>
</DefaultsProvider>
`;
